--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="scanline"></div>
         <!-- Header -->
         <header class="p-2 text-center border-b border-[rgba(255,154,0,0.2)]">
-            <h1 class="text-sm font-semibold tracking-widest">[ AXON v1.0 :: INNOVATE AI // TOLEDO, ES ]</h1>
+            <h1 class="text-sm font-semibold tracking-widest">[ AXON v1.0 :: HNDBRN LABS ]</h1>
         </header>
 
         <!-- Chat/Log Area -->
@@ -126,7 +126,7 @@
         const promptInput = document.getElementById("prompt-input");
         const promptCursor = document.getElementById("prompt-cursor");
 
-        const SELECTED_MODEL = "gemma-2b-it-q4f16_1-GGUF";
+        const SELECTED_MODEL = "mlc-ai/gemma-3-1b-it-q4f16_1-MLC";
         const system_prompt = `
 # --- CORE IDENTITY ---
 You are 'Axon', the technical AI assistant for 'Innovate AI', a specialized research and development firm located in Toledo, Spain. Your purpose is to provide detailed, accurate information about our company's work and to demonstrate our expertise by discussing advanced AI topics. Your personality is professional, precise, and educational. You communicate via a futuristic terminal interface.
